Vector Rotate Node - Euler modes not working as intended #74169

Closed
opened 2020-02-24 15:38:02 +01:00 by Simon Thommes · 9 comments
Member

System Information
Operating system: Linux-5.3.0-7625-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-24 05:01, hash: a31bd3f7b5
Worked: (optional)

Short description of error

  • It seems that instead of switching the order in which the euler rotations are applied the actual rotation axes are swapped.

  • When rotating on only one axis, the mode should not matter (as far as I understand)

  • Functionality of mapping node in texture type does not seem reproducable

(maybe my brain is just tangled up, please confirm)

Exact steps for others to reproduce the error
Create sphere with object coordinates -> Vector Rotate

Or:
vector-rotate-behaviour.blend
choose euler rotation mode other than XYZ
rotate any one axis on its own -> sometimes axis is changed
or rotate multiple axes -> order is not influenced, only axes are swapped and inverted

**System Information** Operating system: Linux-5.3.0-7625-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-24 05:01, hash: `a31bd3f7b5` Worked: (optional) **Short description of error** - It seems that instead of switching the order in which the euler rotations are applied the actual rotation axes are swapped. - When rotating on only one axis, the mode should not matter (as far as I understand) - Functionality of mapping node in texture type does not seem reproducable (maybe my brain is just tangled up, please confirm) **Exact steps for others to reproduce the error** Create sphere with object coordinates -> Vector Rotate Or: [vector-rotate-behaviour.blend](https://archive.blender.org/developer/F8366466/vector-rotate-behaviour.blend) choose euler rotation mode other than XYZ rotate any one axis on its own -> sometimes axis is changed or rotate multiple axes -> order is not influenced, only axes are swapped and inverted
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Charlie Jolly was assigned by Simon Thommes 2020-02-24 15:38:57 +01:00
Member

The Euler options are based on the point transform rather than the texture transform which will explain the difference for this part of the node. Do you think this should change?

As for the rotation order, I'll double check. It was based on another part of Blender and I may have got the sums wrong.

The Euler options are based on the `point` transform rather than the `texture` transform which will explain the difference for this part of the node. Do you think this should change? As for the rotation order, I'll double check. It was based on another part of Blender and I may have got the sums wrong.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Okay, thanks for looking into it!
I think, the way it is right now it is more confusing than it is useful. But that is my personal preference.
I would have expected a different interaction with the naming given.

Okay, thanks for looking into it! I think, the way it is right now it is more confusing than it is useful. But that is my personal preference. I would have expected a different interaction with the naming given.
Member

@SimonThommes Since this is a new node, my own view is to remove the non-standard euler options and to leave only XYZ option and rename it Euler. If this is really important it can be added later.

Only question is whether to match Texture or Point mapping option?

@SimonThommes Since this is a new node, my own view is to remove the non-standard euler options and to leave only XYZ option and rename it Euler. If this is really important it can be added later. Only question is whether to match Texture or Point mapping option?
Author
Member

@CharlieJolly Sounds good to me. I would say match point, as it is standard in mapping.
But it might also be nice to match the additional euler options to all the types from the mapping node... eventually...

@CharlieJolly Sounds good to me. I would say match point, as it is standard in mapping. But it might also be nice to match the additional euler options to all the types from the mapping node... eventually...

This issue was referenced by blender/cycles@13e4499aa9

This issue was referenced by blender/cycles@13e4499aa9603a7bc7cba313a7b6bc1c8f3336fb

This issue was referenced by f9b1e8f000

This issue was referenced by f9b1e8f000ad636456e66e7a377814d79f7d85ac
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74169
No description provided.